fix Reticle target duplicati, point light helpers visibility

--- a/src/index.css
+++ b/src/index.css
@@ -23,8 +23,9 @@
 
   --color-primary: #f472b6;
   --color-primary-transparent: #f472b588;
-  --color-primary-dark: #b12b70;
-  --color-primary-dark-dark: #612e4888;
+  --color-primary-dark: #661f44;
+  /* --color-primary-dark-dark: #612e4888; */
+  --color-primary-dark-dark: #0e050a;
   --color-secondary: #60a5fa;
   --color-secondary-dark: #458dfa67;
   --color-secondary-dark-dark: #203f6db9;
